src/objects/Project_Review__c.object
<CustomObject>
    <fields>
        <fullName>Action_Other__c</fullName>
        <label>Action Other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <picklist>
            <picklistValues>
                <fullName>Procced to Systest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Procced to UAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready to deploy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Review Actions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <label>Project Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sponsor_Email__c</fullName>
        <label>Sponsor Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Stakeholder_Sponser__c</fullName>
        <label>Stakeholder/Sponser</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Other__c</fullName>
        <label>Status Other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reject</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Under Review</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Summary_Notes__c</fullName>
        <label>Summary Notes</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Project Review</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Project_Name__c</columns>
        <columns>Action__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PROJ-{0000}</displayFormat>
        <label>Project Review Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Reviews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Action_Other</fullName>
        <active>true</active>
        <description>If the action is &quot;Other&quot; then a reason must be entered</description>
        <errorConditionFormula>AND( ISPICKVAL( Action__c ,&quot;Other&quot;) , ISBLANK( Action_Other__c   ))</errorConditionFormula>
        <errorDisplayField>Action_Other__c</errorDisplayField>
        <errorMessage>If the action is &quot;Other&quot; then a reason must be entered</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Status_Other</fullName>
        <active>true</active>
        <description>If the status is &quot;Other&quot; then a reason must be entered</description>
        <errorConditionFormula>AND( ISPICKVAL(Status__c,&quot;Other&quot;) , ISBLANK(Status_Other__c  ))</errorConditionFormula>
        <errorDisplayField>Status_Other__c</errorDisplayField>
        <errorMessage>If the status is &quot;Other&quot; then a reason must be entered</errorMessage>
    </validationRules>
</CustomObject>